--- a/styles/styles.css
+++ b/styles/styles.css
@@ -315,6 +315,7 @@ nav ul li a:hover::after {
   width: fit-content;
   border: 1px solid #0077ff;
   padding: 14px 55px;
+  margin-top: 25px;
   border-radius: 6px;
   text-decoration: none;
   color: #FFF;
